2006-01-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Prefer libdb over libndbm, fix check for
	libcrack and remove not needed BACKUP_LIBS.

2006-01-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_debug/pam_debug.c: Fix name of pam_module struct.

	* po/de.po: Fix one translation.

	* configure.in: Add modules/pam_exec.
	* modules/Makefile.am: Add pam_exec subdirectory.
	* modules/pam_exec/README: New.
	* modules/pam_exec/Makefile.am: New.
	* modules/pam_exec/pam_exec.8: New.
	* modules/pam_exec/pam_exec.c: New.
	* modules/pam_exec/pam_exec.8.xml: New.
	* po/POTFILES.in: Add modules/pam_exec/pam_exec.c.
	* po/*.po: Merge new pam_exec strings.

	* libpam/pam_static_modules.h: New.
	* Makefile.am: Reorder subdirectories for static modules.
	* configure.in: Add --enable-static-modules option.
	* libpam/Makefile.am: Define WITH_SELINUX and WITH_PWDB if
	necessary, add pam_static_modules.h, link against all PAM
	module object files if STATIC_MODULES is defined.
	* libpam/pam_static.c: Remove old _static_module* includes,
	include pam_static_modules.h.

	* configure.in: Add checks for xsltproc, xmllint and docbook
	xsl stylesheet.
	* m4/jh_path_xml_catalog.m4: New.

2006-01-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_succeed_if/pam_succeed_if.c: Add support for
	static modules.
	* modules/pam_xauth/pam_xauth.c: Likewise.

	* libpam/pam_static.c (_pam_open_static_handler): Add pamh
	as argument.
	* libpam/pam_private.h: Adjust prototype.
	* libpam/pam_handlers.c (_pam_add_handler): Add pamh to
	_pam_open_static_handler call.

	* configure.in: Don't define PAM_DYNAMIC.
	* libpam/pam_handlers.c: Get ride of PAM_DYNAMIC, don't
	include pam_dynamic.h
	* libpam/pam_dynamic.c: Don't include pam_dynamic.h,
	exclude functions if we compile with PAM_STATIC.
	* libpam/pam_dynamic.h: Remove.
	* libpam/pam_private.h: Add function prototypes from pam_dynamic.h.
	* libpam/Makefile.am: Bump version number of libpam, remove
	pam_dynamic.h.
