@@ -1,3 +1,10 @@
+2006-01-30  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_exec/pam_exec.8.xml: Fix syntax of Return Value section.
+	* modules/pam_exec/Makefile.am: Include Make.xml.rules.
+
+	* Make.xml.rules: New.
+
 2006-01-27  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* configure.in: Prefer libdb over libndbm, fix check for
